--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
   color: var(--primary-text-color);
   background-color: var(--container-bg-color);
   letter-spacing: 0.03em;
+  width: 1600px;
 }
 
 .container {
@@ -131,6 +132,7 @@ span.logo-accent {
 .auth-nav {
   display: flex;
   margin-left: auto;
+  align-items: center;
 }
 
 .auth-nav .item {
@@ -335,6 +337,9 @@ header.top-page-border {
 .team-item {
   background-color: var(--container-bg-color);
   width: calc((100% - 90) / 4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-descr {
@@ -362,14 +367,30 @@ header.top-page-border {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
   gap: 10px;
 }
 
-.team-soc-item {
+.team-soc-link {
+  color: #afb1b8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 10px;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: #2196f3;
+}
+
+.team-soc-icon {
+  fill: currentColor;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--accent-color);
+  color: var(--container-bg-color);
 }
 /* ------------Клієнти------------ */
 
@@ -385,18 +406,27 @@ header.top-page-border {
 
 .clients-list {
   display: flex;
+  align-items: center;
   justify-content: center;
+  width: 100%;
   gap: 30px;
-  width: calc((100% - (5 * 30)) / 6);
+  /* width: calc((100% - (5 * 30)) / 6); */
+  color: #afb1b8;
 }
 
 .clients-icon {
-  width: 106px;
-  height: 60px;
+  width: 170px;
+  height: 92px;
   fill: currentColor;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 16px 32px;
+}
+
+.clients-icon:hover,
+.clients-icon:focus {
+  color: var(--accent-color);
+  border-color: 1px solid var(--accent-color);
 }
 
 /* ---------------Footer------------ */
@@ -404,6 +434,9 @@ header.top-page-border {
   background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.footer-nav {
+  display: block;
 }
 
 .footer-logo {
@@ -444,6 +477,7 @@ span.footer-logo-accent {
   font-size: 14px;
   line-height: 1.71;
   display: inline-block;
+  margin-right: 70px;
 }
 
 .footer-nav-link-address:hover,
@@ -455,6 +489,54 @@ span.footer-logo-accent {
   display: block;
   padding-top: 9px;
   padding-bottom: 9px;
+}
+
+.footer-container {
+  display: flex;
+  align-items: center;
+}
+
+.footer-soc-title {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--container-bg-color);
+  margin-bottom: 20px;
+}
+
+.footer-soc-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 10px;
+}
+
+.footer-soc-link {
+  color: var(--container-bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 10px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.footer-soc-icon {
+  fill: currentColor;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-color);
+  color: var(--container-bg-color);
 }
 
 /* -----------------Portfolio---------------- */
@@ -481,6 +563,12 @@ span.footer-logo-accent {
   background-color: var(--container-bg-color);
   flex-basis: calc((100% - 60px) / 3);
   margin-bottom: 30px;
+}
+.grid-item:hover,
+.grid-item:focus {
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .grid-item-text {
