--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ body {
   color: var(--primary-text-color);
   background-color: var(--container-bg-color);
   letter-spacing: 0.03em;
-  width: 1600px;
 }
 
 .container {
@@ -144,7 +143,6 @@ span.logo-accent {
 }
 
 .auth-nav .link {
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -152,17 +150,12 @@ span.logo-accent {
 .auth-nav-link {
   color: var(--secondary-text-color);
   display: flex;
-  justify-content: center;
   align-items: center;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-/* 
-.auth-nav-icon {
-  fill: currentColor;
-} */
 
 .site-nav-link:hover,
 .site-nav-link:focus {
@@ -175,7 +168,6 @@ span.logo-accent {
 }
 
 .auth-nav-icon {
-  content: "";
   margin-right: 10px;
   fill: currentColor;
 }
@@ -185,7 +177,7 @@ span.logo-accent {
   fill: var(--accent-color);
 }
 
-header.top-page-border {
+header.top-page {
   border-bottom: 1px solid var(--container-border-color);
 }
 
@@ -199,7 +191,6 @@ header.top-page-border {
 
 .overlay {
   max-width: 1600px;
-  height: 600px;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -237,10 +228,10 @@ header.top-page-border {
   border-color: transparent;
   margin: 0 auto;
   padding: 10px 32px;
-  border-radius: 4px;
   min-width: 216px;
   text-align: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .hero-button:hover {
@@ -367,7 +358,6 @@ header.top-page-border {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
   gap: 10px;
 }
 
@@ -376,8 +366,6 @@ header.top-page-border {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  gap: 10px;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -392,10 +380,11 @@ header.top-page-border {
   background-color: var(--accent-color);
   color: var(--container-bg-color);
 }
+
 /* ------------Клієнти------------ */
 
 .clients {
-  width: 1600px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -406,30 +395,32 @@ header.top-page-border {
 
 .clients-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
   gap: 30px;
-  width: calc((100% - (5 * 30)) / 6);
-  color: #afb1b8;
 }
 
-.clients-icon {
+.clients-list-link {
+  display: flex;
   width: 170px;
   height: 92px;
-  fill: currentColor;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 16px 32px;
+  color: #afb1b8;
+  width: calc((100% - 5 * 30) / 6);
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
+.clients-icon {
+  fill: currentColor;
+}
+
+.clients-list-link:hover,
+.clients-list-link:focus {
   color: var(--accent-color);
   border-color: 1px solid var(--accent-color);
 }
 
 /* ---------------Footer------------ */
+
 .bottom-page {
   background-color: var(--footer-background-color);
   padding-top: 60px;
@@ -437,6 +428,7 @@ header.top-page-border {
 }
 .footer-nav {
   display: block;
+  margin-right: 70px;
 }
 
 .footer-logo {
@@ -453,6 +445,9 @@ span.footer-logo-accent {
   color: var(--accent-color);
 }
 
+.footer-nav-item:not(:last-child) {
+  margin-bottom: 9px;
+}
 .footer-nav-link {
   color: var(--footer-link-color);
   font-style: normal;
@@ -477,7 +472,6 @@ span.footer-logo-accent {
   font-size: 14px;
   line-height: 1.71;
   display: inline-block;
-  margin-right: 70px;
 }
 
 .footer-nav-link-address:hover,
@@ -487,8 +481,6 @@ span.footer-logo-accent {
 
 .footer-nav-address .link {
   display: block;
-  padding-top: 9px;
-  padding-bottom: 9px;
 }
 
 .footer-container {
@@ -522,7 +514,6 @@ span.footer-logo-accent {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
   gap: 10px;
   width: 44px;
   height: 44px;
@@ -570,7 +561,9 @@ span.footer-logo-accent {
 .portfolio-button:hover,
 .portfolio-button:focus {
   color: var(--container-bg-color);
-  background: var(--accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-grid {
@@ -580,13 +573,15 @@ span.footer-logo-accent {
   gap: 30px;
 }
 
-.grid-item {
+.grid-link {
+  display: block;
   background-color: var(--container-bg-color);
   flex-basis: calc((100% - 60px) / 3);
   margin-bottom: 30px;
 }
-.grid-item:hover,
-.grid-item:focus {
+
+.grid-link:hover,
+.grid-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
